@startuml
'https://plantuml.com/sequence-diagram

hide circle
skinparam classAttributeIconSize 0

class ReviewController {
     +upvote(Long reviewId, Review review): Review
     +downvote(Long reviewId, Review review): Review
}

class ReviewServiceImpl {
    +ReviewService(ReviewRepository revRepo)
    +upvote(Long reviewId, Review review)
    +downvote(Long reviewId, Review review)
}

interface ReviewService <<interface>> {
    +upvote(Long reviewId, Review review)
    +downvote(Long reviewId, Review review)
}

class Review {
    -reviewId
    -text
    -rating
    -upvote
    -downvote
    -date/time
    -status
    -funnyFact
    Review(Long reviewId, String text, int rating, int upvote, int downvote, LocalDateTime date, String status, String funnyFact)
}

interface ReviewRepository <<interface>> {
    + getReview(): List<Review>
}

ReviewController..>ReviewService
ReviewController..>Review
ReviewService..>ReviewServiceImpl
ReviewServiceImpl..>ReviewRepository
ReviewRepository "1" -right-> "0..*" Review:  records
@enduml
